Bug#38083 Error-causing row inserted into partitioned table despite error